refactor(profile): route adaptations through managed profiles